--- a/src/assets/scss/_generic.scss
+++ b/src/assets/scss/_generic.scss
@@ -10,5 +10,7 @@ img {
 }
 
 body {
-    font-family: Open Sans, sans-serif;
+    font-family: 'Open Sans Variable', sans-serif;
+    font-weight: 500;
+    font-variation-settings: "wdth" 75, "wght" 500;
 }
